# rust-template

./: .commitlintrc.yml  .pre-commit-config.yaml  Cargo.toml  Cargo.toml.liquid  LICENSE  README.md  cargo-generate.toml  cliff.toml  init-git-repol.rhai  justfile  post-fmt.rhai  post-init-pre-commit.rhai  post-remove-files.rhai  post-update-deps.rhai  taplo.toml
.github/workflows/: check.yml  test.yml
bench/: main.rs
src/: cli.rs  lib.rs  main.rs
tests/: main.rs
