[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"
rust-version = "1.76"
description = "{{description}}"
readme = "README.md"
license = "MIT"


documentation = "{{docs_url}}"
repository = "{{repo_url}}"

[[bench]]
name = "main"
harness = false

[lib]
path = "src/lib.rs"

{% if include_bin %}
[[bin]]
path = "src/main.rs"
name = "{{crate_name}}"
{% endif %}

[dependencies]
color-eyre = "0.6"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }

{% if include_bin %}
clap = { version = "4", features = ["derive", "unicode", "cargo"] }
{% endif %}

tracing = { version = "0", features = ["attributes"] }
tracing-subscriber = "0"
tracing-error = "0"
serde = { version = "1", features = ["derive"] }

{% if  serde_format contains "YAML" %}
serde_yaml = "0.9"
{% endif %}
{% if serde_format contains "JSON" %}
serde_json = "1.0.108"
{% endif %}
{% if serde_format contains "TOML" %}
toml_edit = "0.22.22"
{% endif %}
{% if serde_format contains  "CBOR" %}
ciborium = "0.2.2"
{% endif %}

[dev-dependencies]
tempfile = "3.14.0"
assert_cmd = "2.0"
similar-asserts = { version = "1.6.0", features = ["serde"] }
assert_fs = "1.1.2"
pretty_assertions = "0"
criterion = "0"


{% if include_async %}
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot", "sync"] }
tokio-stream = "0.1.17"
{% endif %}

# please tell me what to do Clippy-senpai 
[lints.clippy]
perf="warn"
pedantic="warn"
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"
allow-unwrap-in-tests = true
